<resources>
    <string name="app_name">My First Application</string>
    <string name="usernameLayout">Usuario o email</string>
    <string name="passwordLayout">Contraseña</string>
    <string name="loginButton">Entrar</string>
    <string name="error">Formato incorrecto</string>
    <string name="accept">Aceptar</string>
    <string name="title">Iniciar Sesión</string>
    <string name="title_Ok">Login correcto</string>
    <string name="title_Ko">Login erróneo</string>
    <string name="supporting_text_Ok">Tu usuario y contraseña son correctos</string>
    <string name="supporting_text_Ko">Comprueba de nuevo el usuario y la contraseña</string>
    <string name="button1">Google</string>
    <string name="button2">Microsoft</string>
    <string name="button3">Apple</string>
    <string name="button4">SM Educamos</string>
    <string name="button5">SM Aprendizaje Plus</string>
    <string name="subtitle">No recuerdo mi contraseña</string>
    <string name="subtitle1">Iniciar sesión con tu usuario de:</string>
    <string name="subtitle2">Recuerda que también puedes entrar a través de:</string>
    <string name="login_terms_privacy1">He leído y acepto las&#160;</string>
    <string name="login_terms_privacy2">políticas de privacidad.</string>
    <string name="url_forgot_password">https://es.dragon-ball-official.com/</string>
    <string name="url_privacy_politics">https://terminosycondiciones.es/</string>
    <string name="welcome_messages">Has pulsado el botón %1$s</string>
    <string name="create_login">Usuario %1$s creado</string>
    <string name="error_login">Usuario o contraseña inválida</string>
    <string name="correct_login">Usuario %1$s ya ha sido creado</string>
    <string name="view_users">Ver usuarios</string>
    <string name="title_login">Login</string>
    <string name="title_users">Usuarios</string>

</resources>